--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "16.6.1",
     "react-draggable": "3.0.3",
     "react-localization": "^1.0.10",
+    "@voxeet/voxeet-web-sdk": "1.8.5",
     "react-redux": "5.0.6",
     "react-tooltip": "3.8.1",
     "redux": "3.7.2",
@@ -55,7 +56,7 @@
     "webpack-dev-server": "^2.8.2"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^1.7.14"
+    "@voxeet/voxeet-web-sdk": "^1.8.5"
   },
   "files": [
     "README.md",
