--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
   ],
   "dependencies": {
     "@voxeet/voxeet-web-sdk": "1.8.6",
-    "autolinker": "^1.8.1",
-    "bowser": "1.7.3",
-    "classnames": "2.2.5",
-    "css-element-queries": "0.4.0",
+    "autolinker": "^2.2.2",
+    "bowser": "1.9.4",
+    "express": "^4.16.4",
+    "classnames": "2.2.6",
+    "css-element-queries": "1.1.1",
     "dompurify": "^1.0.8",
-    "immutable": "3.8.1",
-    "prop-types": "15.6.0",
-    "react": "16.0.0",
-    "react-dom": "16.6.1",
-    "react-draggable": "3.0.3",
-    "react-localization": "^1.0.10",
-    "react-redux": "5.0.6",
-    "react-tooltip": "3.8.1",
+    "immutable": "3.8.2",
+    "prop-types": "15.6.2",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
+    "react-draggable": "3.1.1",
+    "react-localization": "^1.0.13",
+    "react-redux": "5.0.7",
+    "react-tooltip": "3.9.2",
     "redux": "3.7.2",
-    "redux-promise": "0.5.3",
-    "redux-thunk": "2.2.0"
+    "redux-promise": "0.6.0",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
