--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "MARTIN Valentin <vmartin@voxeet.com>"
   ],
   "dependencies": {
-    "@voxeet/voxeet-web-sdk": "1.8.6",
+    "@voxeet/voxeet-web-sdk": "1.9.0-alpha.16",
     "autolinker": "^2.2.2",
     "bowser": "1.9.4",
     "express": "^4.16.4",
@@ -59,7 +59,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^1.8.5"
+    "@voxeet/voxeet-web-sdk": "^1.9.0-alpha.16"
   },
   "files": [
     "README.md",
