--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,19 @@
 {
-    "presets": ["env", "stage-0", "react"],
-    "plugins": [
-      "react-hot-loader/babel",
-      "transform-class-properties",
-      "transform-decorators-legacy",
-    ]
-  }
-  
+  "presets":[
+    ["@babel/preset-env", {
+      useBuiltIns: 'entry',
+      debug: false
+    }],
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    ["@babel/plugin-transform-runtime"],
+    "react-hot-loader/babel",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    ["@babel/plugin-transform-modules-commonjs"],
+    "@babel/plugin-transform-regenerator",
+    "@babel/plugin-transform-arrow-functions",
+    ["@babel/plugin-transform-classes"]
+  ]
+}
