--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/bundle.js",
   "scripts": {
     "start": "webpack-dev-server -d --hot --inline --history-api-fallback --content-base ./src/static",
-    "build": "webpack --config webpack.config.prod.js --progress -p",
+    "build": "webpack --config webpack.config.prod.js --progress",
     "prepublishOnly": "npm run build"
   },
   "keywords": [],
@@ -16,10 +16,10 @@
     "MARTIN Valentin <vmartin@voxeet.com>"
   ],
   "dependencies": {
-    "@voxeet/voxeet-web-sdk": "1.9.0-alpha.16",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/runtime": "^7.3.4",
     "autolinker": "^2.2.2",
     "bowser": "1.9.4",
-    "express": "^4.16.4",
     "classnames": "2.2.6",
     "css-element-queries": "1.1.1",
     "dompurify": "^1.0.8",
@@ -36,30 +36,34 @@
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "copy-webpack-plugin": "^4.2.0",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-transform-arrow-functions": "^7.2.0",
+    "@babel/plugin-transform-classes": "^7.3.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-transform-regenerator": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.0.5",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^4.28.3",
+    "react-hot-loader": "^4.6.3",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.2.0",
     "webpack-dev-server": "^3.1.14"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^1.9.0-alpha.16"
+    "@voxeet/voxeet-web-sdk": "^1.9.0-alpha.10"
   },
   "files": [
     "README.md",
