--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "MARTIN Valentin <vmartin@voxeet.com>"
   ],
   "dependencies": {
-    "@voxeet/voxeet-web-sdk": "^1.9.0-alpha.16",
+    "@voxeet/voxeet-web-sdk": "^1.9.0",
     "@babel/polyfill": "^7.2.5",
     "@babel/runtime": "^7.3.4",
     "autolinker": "^2.2.2",
@@ -64,7 +64,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^1.9.0-alpha.16"
+    "@voxeet/voxeet-web-sdk": "^1.9.0"
   },
   "files": [
     "README.md",
