--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,14 @@
 {
   "presets":[
     ["@babel/preset-env", {
-      useBuiltIns: 'entry',
+      useBuiltIns: 'usage',
       debug: false
     }],
     "@babel/preset-react"
   ],
   "plugins": [
-    ["@babel/plugin-transform-runtime"],
-    "react-hot-loader/babel",
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties", { "loose": true }],
     ["@babel/plugin-transform-modules-commonjs"],
-    "@babel/plugin-transform-regenerator",
-    "@babel/plugin-transform-arrow-functions",
-    ["@babel/plugin-transform-classes"]
+    "@babel/plugin-transform-regenerator"
   ]
 }
