--- a/.babelrc
+++ b/.babelrc
@@ -2,12 +2,14 @@
   "presets":[
     ["@babel/preset-env", {
       useBuiltIns: 'usage',
+      corejs: '2',
       debug: false
     }],
     "@babel/preset-react"
   ],
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    "@babel/plugin-proposal-class-properties",
     ["@babel/plugin-transform-modules-commonjs"],
     "@babel/plugin-transform-regenerator"
   ]
