Build staging/produciton matrix of the package. Do not add SHA256 to the version of master

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,15 @@ on:
   push:
     branches:
       - master
+      - develop
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        voxeet_env: [produciton, staging]
 
     steps:
     - uses: actions/checkout@v2
@@ -20,13 +24,26 @@ jobs:
         always-auth: true
     - name: install dependencies
       run: |
+          sed -i 's/-production"/-${{ env.NODE_ENV }}"/' package.json
           yarn install
       env:
           NODE_AUTH_TOKEN: ${{ secrets.NEXUS_AUTH_TOKEN }}
+          NODE_ENV: ${{ matrix.voxeet_env }}
     - uses: rlespinasse/github-slug-action@master
+
+    - name: set snapshot version
+      if: endsWith(github.ref, '/master') != true
+      run: |
+          yarn version --no-git-tag-version --new-version $(npm --silent run get-version)-${{ env.GITHUB_REF_SLUG }}-${{ env.GITHUB_SHA_SHORT }}-${{ env.NODE_ENV }}
+
+    - name: set release version
+      if: endsWith(github.ref, '/master')
+      run: |
+          yarn version --no-git-tag-version --new-version $(npm --silent run get-version)-${{ env.NODE_ENV }}
+
     - name: build and publish
       run: |
-          yarn version --no-git-tag-version --new-version $(npm --silent run get-version)-${{ env.GITHUB_REF_SLUG }}-${{ env.GITHUB_SHA_SHORT }}
           yarn publish
       env:
           NODE_AUTH_TOKEN: ${{ secrets.NEXUS_AUTH_TOKEN }}
+          NODE_ENV: ${{ matrix.voxeet_env }}
