--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        voxeet_env: [produciton, staging]
+        voxeet_env: [production, staging]
 
     steps:
     - uses: actions/checkout@v2
