fix: provide NPM token as env variable to authenticate against NPM registry

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,13 @@ jobs:
 
     - name: build and publish
       run: |
-          yarn publish
+        yarn publish
       env:
-          NODE_AUTH_TOKEN: ${{ secrets.NEXUS_AUTH_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NEXUS_AUTH_TOKEN }}
 
     - name: create NPM tag for develop version
       if: ${{ env.GITHUB_REF_SLUG == 'develop' }}
       run: |
         npm dist-tag add @voxeet/react-components@$(npm run --silent get-version) ${{ env.GITHUB_REF_SLUG }}
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NEXUS_AUTH_TOKEN }}
