--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@voxeet/react-components",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "",
   "main": "./dist/bundle.js",
   "scripts": {
@@ -20,12 +20,14 @@
     "IE 11"
   ],
   "dependencies": {
-    "@voxeet/voxeet-web-sdk": "2.3.0",
     "@babel/polyfill": "^7.2.5",
     "@babel/runtime": "^7.3.4",
+    "@voxeet/react-redux-5.1.1": "5.1.1",
+    "@voxeet/voxeet-web-sdk": "2.4.3",
     "autolinker": "^2.2.2",
     "bowser": "1.9.4",
     "browserslist": "^4.5.2",
+    "can-autoplay": "^3.0.0",
     "classnames": "2.2.6",
     "css-element-queries": "1.1.1",
     "express": "^4.16.4",
@@ -37,7 +39,6 @@
     "react-draggable": "3.1.1",
     "react-localization": "^1.0.13",
     "react-player": "^1.11.1",
-    "@voxeet/react-redux-5.1.1": "5.1.1",
     "react-router-dom": "^4.3.1",
     "react-tooltip": "3.9.2",
     "redux": "4.0.4",
@@ -71,7 +72,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "2.3.0"
+    "@voxeet/voxeet-web-sdk": "2.4.3"
   },
   "files": [
     "README.md",
