--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       env:
           NODE_AUTH_TOKEN: ${{ secrets.NEXUS_AUTH_TOKEN }}
 
-    - uses: rlespinasse/github-slug-action@master
+    - uses: rlespinasse/github-slug-action@2.1.0
 
     - name: set snapshot version
       if: endsWith(github.ref, '/master') != true
