--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,15 +3,15 @@ name: Release build
 on:
   push:
     tags:
-      - "*"
+    - 'rel/*'
 
 jobs:
   release:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: setting nodejs
+    - uses: actions/checkout@v2
+    - name: setting nodejs
       uses: actions/setup-node@v1
       with:
         node-version: 12
@@ -20,10 +20,10 @@ jobs:
     - name: install dependencies
       run: |
           yarn install
-        env:
+      env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-      - name: build and publish
-        run: |
+    - name: build and publish
+      run: |
           yarn publish
-        env:
+      env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
