--- a/.github/workflows/build_publish_snapshot.yml
+++ b/.github/workflows/build_publish_snapshot.yml
@@ -1,10 +1,9 @@
-name: Snapshot build
+name: Snapshot build and publish
 
 on:
   push:
     branches:
       - 'develop'
-
 
 jobs:
   build:
@@ -23,7 +22,10 @@ jobs:
 
       - id: codeartifact_login
         name: Login to CodeArtifact
-        run: echo "::set-output name=code_artifact_token::$(/usr/local/bin/aws codeartifact get-authorization-token --duration-seconds 900 --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --domain-owner ${{ secrets.CODEARTIFACT_DOMAIN_OWNER }} --region ${{ secrets.AWS_REGION }} --output text --query authorizationToken)"
+        run: |
+          CODEARTIFACT_TOKEN=$(/usr/local/bin/aws codeartifact get-authorization-token --duration-seconds 900 --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --domain-owner ${{ secrets.CODEARTIFACT_DOMAIN_OWNER }} --region ${{ secrets.AWS_REGION }} --output text --query authorizationToken)
+          echo "::add-mask::$CODEARTIFACT_TOKEN"
+          echo "CODEARTIFACT_TOKEN=$CODEARTIFACT_TOKEN" >> $GITHUB_ENV
 
       - name: setting nodejs
         uses: actions/setup-node@v1
@@ -36,7 +38,7 @@ jobs:
         run: |
           yarn install
         env:
-          NODE_AUTH_TOKEN: ${{ steps.codeartifact_login.outputs.code_artifact_token }}
+          NODE_AUTH_TOKEN: ${{ env.CODEARTIFACT_TOKEN }}
 
       - name: setting nodejs
         uses: actions/setup-node@v1
@@ -50,10 +52,10 @@ jobs:
           npm --no-git-tag-version version $(npm run --silent get-version)-$GITHUB_SHA
           yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{ steps.codeartifact_login.outputs.code_artifact_token }}
+          NODE_AUTH_TOKEN: ${{ env.CODEARTIFACT_TOKEN }}
 
       - name: create NPM tag for develop version
         run: |
           npm dist-tag add @voxeet/react-components@$(npm run --silent get-version) ${{ env.GITHUB_REF_SLUG }}
         env:
-          NODE_AUTH_TOKEN: ${{ steps.codeartifact_login.outputs.code_artifact_token }}
+          NODE_AUTH_TOKEN: ${{ env.CODEARTIFACT_TOKEN }}
