--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "prop-types": "15.6.2",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "react-draggable": "3.1.1",
+    "react-draggable": "^3.3.2",
     "react-localization": "^1.0.13",
     "react-player": "^1.11.1",
     "@voxeet/react-redux-5.1.1": "5.1.1",
