--- a/.github/workflows/build_publish_snapshot.yml
+++ b/.github/workflows/build_publish_snapshot.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'develop'
+      - 'mmsd-demo'
 
 jobs:
   build:
@@ -59,3 +60,19 @@ jobs:
           npm dist-tag add @voxeet/react-components@$(npm run --silent get-version) ${{ env.GITHUB_REF_SLUG }}
         env:
           NODE_AUTH_TOKEN: ${{ env.CODEARTIFACT_TOKEN }}
+
+      - name: Generate github app token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.VOXEET_IO_WEB_APP_ID }}
+          private_key: ${{ secrets.VOXEET_IO_WEB_APP_PRIVATE_KEY }}
+          repository: voxeet/voxeet-io-web
+
+      - name: Send repository dispatch to voxeet-io-web
+        uses: peter-evans/repository-dispatch@v1
+        continue-on-error: true
+        with:
+          token: ${{ steps.generate_token.outputs.token }}
+          event-type: uxkit-${{ env.GITHUB_REF_SLUG }}
+          repository: voxeet/voxeet-io-web
