--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@voxeet/react-components",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "",
   "main": "./dist/bundle.js",
   "scripts": {
@@ -58,7 +58,7 @@
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
@@ -73,7 +73,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^3.1.1"
+    "@voxeet/voxeet-web-sdk": "^3.1.3"
   },
   "files": [
     "README.md",
