--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./dist/bundle.js",
   "scripts": {
-    "start": "webpack-dev-server -d --hot --inline --history-api-fallback --content-base ./src/static",
+    "start": "webpack serve --hot --inline --history-api-fallback --content-base ./src/static --config webpack.config.js",
     "build": "webpack --config webpack.config.prod.js --progress",
     "prepublishOnly": "npm run build",
     "get-version": "echo $npm_package_version"
@@ -19,61 +19,69 @@
   "browserslist": [
     "IE 11"
   ],
+  "resolve": {
+    "extensions": [
+      ".js", ".jsx", ".json"
+    ]
+  },
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "@babel/runtime": "^7.3.4",
     "autolinker": "^3.14.2",
-    "bowser": "1.9.4",
+    "bowser": "2.11.0",
     "browserslist": "^4.5.2",
     "can-autoplay": "^3.0.0",
-    "classnames": "2.2.6",
-    "css-element-queries": "1.1.1",
+    "classnames": "2.3.1",
+    "core-js": "3",
+    "css-element-queries": "1.2.3",
     "express": "^4.16.4",
-    "immutable": "3.8.2",
+    "immutable": "4.0.0-rc.14",
     "js-cookie": "^2.2.1",
-    "prop-types": "15.6.2",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-draggable": "^3.3.2",
+    "prop-types": "15.7.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-draggable": "^4.4.3",
     "react-localization": "^1.0.13",
-    "react-player": "^1.11.1",
-    "@voxeet/react-redux-5.1.1": "5.1.1",
-    "react-router-dom": "^4.3.1",
-    "react-tooltip": "3.9.2",
+    "react-player": "^2.9.0",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "react-tooltip": "4.2.21",
     "react-virtualized-auto-sizer": "^1.0.5",
     "react-window": "^1.8.6",
-    "redux": "4.0.4",
+    "redux": "^4.1.0",
     "redux-promise": "0.6.0",
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-proposal-decorators": "^7.3.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
-    "@babel/plugin-transform-regenerator": "^7.3.4",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "copy-webpack-plugin": "^4.2.0",
-    "css-loader": "^0.28.7",
-    "mini-css-extract-plugin": "^1.6.0",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "less": "^3.9.0",
-    "less-loader": "^4.0.5",
-    "node-pre-gyp": "^0.12.0",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "style-loader": "^0.18.2",
-    "uglifyjs-webpack-plugin": "^1.1.5",
-    "url-loader": "^0.5.9",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.0",
+    "@babel/core": "^7.14.8",
+    "@babel/eslint-parser": "^7.14.7",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.5",
+    "@babel/plugin-transform-regenerator": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.8",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
+    "eslint": "^7.31.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.1.0",
+    "node-pre-gyp": "^0.17.0",
+    "react-hot-loader": "^4.13.0",
+    "style-loader": "^3.1.0",
+    "terser-webpack-plugin": "^5.1.4",
+    "url-loader": "^4.1.1",
+    "webpack": "5.44.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.1.14"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^3.1.3"
+    "@voxeet/voxeet-web-sdk": "^3.2.0"
   },
   "files": [
     "README.md",
