--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   ],
   "resolve": {
     "extensions": [
-      ".js", ".jsx", ".json"
+      ".js",
+      ".jsx",
+      ".json"
     ]
   },
   "dependencies": {
+    "@babel/runtime": "^7.15.3",
+    "@babel/runtime-corejs3": "^7.15.3",
     "autolinker": "^3.14.2",
     "bowser": "2.11.0",
     "browserslist": "^4.5.2",
@@ -59,7 +63,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.5",
     "@babel/plugin-transform-regenerator": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
