--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "get-version": "echo $npm_package_version"
   },
   "keywords": [],
-  "author": "Voxeet",
+  "author": "Dolby",
   "contributors": [
     "BEHUET Jérôme <jbehuet@gmail.com>",
     "GOURGUES Thomas <tgourgues@voxeet.com>",
@@ -85,7 +85,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^3.3.0-beta.2"
+    "@voxeet/voxeet-web-sdk": "^3.3.0-beta.3"
   },
   "files": [
     "README.md",
