--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
       ".json"
     ]
   },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
   "dependencies": {
     "@babel/runtime": "^7.15.3",
     "@babel/runtime-corejs3": "^7.15.3",
@@ -73,10 +76,13 @@
     "eslint": "^7.31.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.4",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "lint-staged": "^12.3.6",
     "mini-css-extract-plugin": "^2.1.0",
     "node-pre-gyp": "^0.17.0",
+    "prettier": "2.6.0",
     "react-hot-loader": "^4.13.0",
     "style-loader": "^3.1.0",
     "terser-webpack-plugin": "^5.1.4",
