--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@voxeet/react-components",
-  "version": "3.2.2",
+  "version": "3.3.0",
   "description": "",
   "main": "./dist/bundle.js",
   "scripts": {
@@ -48,7 +48,7 @@
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-tooltip": "4.2.21",
     "react-virtualized-auto-sizer": "^1.0.5",
     "react-window": "^1.8.6",
@@ -81,12 +81,12 @@
     "style-loader": "^3.1.0",
     "terser-webpack-plugin": "^5.1.4",
     "url-loader": "^4.1.1",
-    "webpack": "5.44.0",
+    "webpack": "5.72.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^4.9.0"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^3.3.0-beta.3"
+    "@voxeet/voxeet-web-sdk": "^3.4.1"
   },
   "files": [
     "README.md",
