--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./dist/bundle.js",
   "scripts": {
-    "start": "webpack serve --hot --inline --history-api-fallback --content-base ./src/static --config webpack.config.js",
+    "start": "webpack serve --config webpack.config.js",
     "build": "webpack --config webpack.config.prod.js --progress",
     "prepublishOnly": "npm run build",
     "get-version": "echo $npm_package_version"
@@ -48,7 +48,6 @@
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
     "react-tooltip": "4.2.21",
     "react-virtualized-auto-sizer": "^1.0.5",
     "react-window": "^1.8.6",
