--- a/.github/workflows/build_publish_snapshot.yml
+++ b/.github/workflows/build_publish_snapshot.yml
@@ -63,19 +63,18 @@ jobs:
         env:
           JFA_NPM_REGISTRY_URL: ${{ secrets.JFA_NPM_SNAPSHOTS_REGISTRY_URL }}
 
+      - name: Generate github app token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.VOXEET_IO_WEB_APP_ID }}
+          private_key: ${{ secrets.VOXEET_IO_WEB_APP_PRIVATE_KEY }}
+          repository: voxeet/voxeet-io-web
 
-      # - name: Generate github app token
-      #   id: generate_token
-      #   uses: tibdex/github-app-token@v1
-      #   with:
-      #     app_id: ${{ secrets.VOXEET_IO_WEB_APP_ID }}
-      #     private_key: ${{ secrets.VOXEET_IO_WEB_APP_PRIVATE_KEY }}
-      #     repository: voxeet/voxeet-io-web
-      #
-      # - name: Send repository dispatch to voxeet-io-web
-      #   uses: peter-evans/repository-dispatch@v1
-      #   continue-on-error: true
-      #   with:
-      #     token: ${{ steps.generate_token.outputs.token }}
-      #     event-type: uxkit-${{ env.GITHUB_REF_SLUG }}
-      #     repository: voxeet/voxeet-io-web
+      - name: Send repository dispatch to voxeet-io-web
+        uses: peter-evans/repository-dispatch@v1
+        continue-on-error: true
+        with:
+          token: ${{ steps.generate_token.outputs.token }}
+          event-type: uxkit-${{ env.GITHUB_REF_SLUG }}
+          repository: voxeet/voxeet-io-web
