--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./dist/bundle.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
+    "start": "webpack serve",
     "check": "prettier -w --check  src",
     "test": "jest",
     "test:watch": "yarn test -- --watch",
@@ -92,7 +92,7 @@
     "terser-webpack-plugin": "^5.1.4",
     "url-loader": "^4.1.1",
     "webpack": "5.72.0",
-    "webpack-cli": "^4.7.2",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.0"
   },
   "peerDependencies": {
