--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@voxeet/react-components",
-  "version": "3.5.1",
+  "version": "3.7.0",
   "description": "",
   "main": "./dist/bundle.js",
   "scripts": {
@@ -93,7 +93,7 @@
     "webpack-dev-server": "^4.9.0"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^3.7.0-beta.6"
+    "@voxeet/voxeet-web-sdk": "^3.7.0"
   },
   "files": [
     "README.md",
