--- a/package.json
+++ b/package.json
@@ -27,12 +27,18 @@
       ".json"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "src/**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@babel/runtime": "^7.15.3",
     "@babel/runtime-corejs3": "^7.15.3",
+    "@voxeet/voxeet-web-sdk": "3.8.0-develop-d379f38c-production",
     "autolinker": "^3.14.2",
     "bowser": "1.9.4",
     "browserslist": "^4.5.2",
@@ -76,14 +82,14 @@
     "eslint": "^7.31.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
+    "husky": "^8.0.1",
+    "jest": "^29.2.2",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
-    "lint-staged": "^12.3.6",
+    "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.1.0",
     "node-pre-gyp": "^0.17.0",
-    "prettier": "2.6.0",
+    "prettier": "2.7.1",
     "react-hot-loader": "^4.13.0",
     "style-loader": "^3.1.0",
     "terser-webpack-plugin": "^5.1.4",
